--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background: #28282B;
+    background: #fff;
 }
 
 .logo {
@@ -18,12 +18,12 @@ body {
 }
 
 .logo h4 {
-    color: white;
+    color: black;
     letter-spacing: 1.5px;
 }
 
 .logo h4:hover {
-    color: greenyellow;
+    color: #222;
 }
 
 .main {
@@ -35,7 +35,7 @@ body {
 .profile img {
     width: 200px;
     height: 200px;
-    border: 2px solid #fff;
+    border: 2px solid #black;
     border-radius: 50%;
     margin: 20px 0 20px 0;
 }
@@ -50,7 +50,7 @@ body {
     background-color: #225;
     margin: 10px;
     padding: 15px 250px;
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 50px;
 }
 
